# user-data-anonymization

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
orchestration/: prefect_flow.py
orchestration/scripts/: deploy.py
pipeline/: anonymizer.py  api_client.py  config.py  main.py  reporter.py  schema.py  storage.py
tests/: test_anonymizer.py  test_api_client.py  test_reporter.py  test_schema.py  test_storage.py
