[project]
name = "user-data-anonymization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "duckdb>=1.2.2",
    "flake8>=7.2.0",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "requests>=2.32.3",
    "setuptools>=80.7.1",
]
